Resolve the issues related to the GlobalExceptionHandler