@@ -4,6 +4,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -11,114 +12,120 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import ua.org.kse.external.TagServiceException;
 
-import java.util.stream.Collectors;
+import java.net.URI;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ProblemDetails> handleValidation(MethodArgumentNotValidException ex, HttpServletRequest req) {
+    public ResponseEntity<ProblemDetail> handleValidation(MethodArgumentNotValidException ex,
+                                                          HttpServletRequest req) {
         BindingResult br = ex.getBindingResult();
-        var errors = br.getFieldErrors().stream()
-            .map(fe -> ProblemDetails.FieldError.builder()
-                .field(fe.getField())
-                .message(fe.getDefaultMessage())
-                .build())
-            .collect(Collectors.toList());
 
-        var body = ProblemDetails.builder()
-            .type("https://example.com/problems/validation-error")
-            .title("Bad Request")
-            .status(HttpStatus.BAD_REQUEST.value())
-            .detail("Validation failed")
-            .instance(req.getRequestURI())
-            .errors(errors)
-            .build();
+        List<Map<String, String>> errors = br.getFieldErrors().stream()
+            .map(fe -> Map.of(
+                "field", fe.getField(),
+                "message", Objects.toString(fe.getDefaultMessage(), "Validation error")
+            ))
+            .toList();
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-            .contentType(MediaType.APPLICATION_PROBLEM_JSON)
-            .body(body);
+        ProblemDetail body = createProblemDetail(
+            HttpStatus.BAD_REQUEST,
+            "Validation failed",
+            "validation-error",
+            req
+        );
+        body.setProperty("errors", errors);
+
+        return buildResponse(HttpStatus.BAD_REQUEST, body);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ProblemDetails> handleConstraintViolation(ConstraintViolationException ex,
-                                                                    HttpServletRequest req) {
-        var errors = ex.getConstraintViolations().stream()
-            .map(cv -> ProblemDetails.FieldError.builder()
-                .field(cv.getPropertyPath().toString())
-                .message(cv.getMessage())
-                .build())
-            .collect(Collectors.toList());
+    public ResponseEntity<ProblemDetail> handleConstraintViolation(ConstraintViolationException ex,
+                                                                   HttpServletRequest req) {
+        List<Map<String, String>> errors = ex.getConstraintViolations().stream()
+            .map(cv -> Map.of(
+                "field", cv.getPropertyPath().toString(),
+                "message", Objects.toString(cv.getMessage(), "Validation error")
+            ))
+            .toList();
 
-        var body = ProblemDetails.builder()
-            .type("https://example.com/problems/validation-error")
-            .title("Bad Request")
-            .status(HttpStatus.BAD_REQUEST.value())
-            .detail("Validation failed")
-            .instance(req.getRequestURI())
-            .errors(errors)
-            .build();
+        ProblemDetail body = createProblemDetail(
+            HttpStatus.BAD_REQUEST,
+            "Validation failed",
+            "validation-error",
+            req
+        );
+        body.setProperty("errors", errors);
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-            .contentType(MediaType.APPLICATION_PROBLEM_JSON)
-            .body(body);
+        return buildResponse(HttpStatus.BAD_REQUEST, body);
     }
 
     @ExceptionHandler(TagServiceException.class)
-    public ResponseEntity<ProblemDetails> handleTagService(TagServiceException ex, HttpServletRequest req) {
-        var body = ProblemDetails.builder()
-            .type("https://example.com/problems/tag-service-error")
-            .title("Cosmic Tag Service Error")
-            .status(HttpStatus.SERVICE_UNAVAILABLE.value())
-            .detail(ex.getMessage())
-            .instance(req.getRequestURI())
-            .build();
+    public ResponseEntity<ProblemDetail> handleTagService(TagServiceException ex, HttpServletRequest req) {
+        ProblemDetail body = createProblemDetail(
+            HttpStatus.SERVICE_UNAVAILABLE,
+            ex.getMessage(),
+            "tag-service-error",
+            req
+        );
 
-        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE)
-            .contentType(MediaType.APPLICATION_PROBLEM_JSON)
-            .body(body);
+        return buildResponse(HttpStatus.SERVICE_UNAVAILABLE, body);
     }
 
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<ProblemDetails> handleNotFound(NotFoundException ex, HttpServletRequest req) {
-        var body = ProblemDetails.builder()
-            .type("https://example.com/problems/not-found")
-            .title("Not Found")
-            .status(HttpStatus.NOT_FOUND.value())
-            .detail(ex.getMessage())
-            .instance(req.getRequestURI())
-            .build();
+    public ResponseEntity<ProblemDetail> handleNotFound(NotFoundException ex, HttpServletRequest req) {
+        ProblemDetail body = createProblemDetail(
+            HttpStatus.NOT_FOUND,
+            ex.getMessage(),
+            "not-found",
+            req
+        );
 
-        return ResponseEntity.status(HttpStatus.NOT_FOUND)
-            .contentType(MediaType.APPLICATION_PROBLEM_JSON)
-            .body(body);
+        return buildResponse(HttpStatus.NOT_FOUND, body);
     }
 
     @ExceptionHandler(BadRequestException.class)
-    public ResponseEntity<ProblemDetails> handleBadRequest(BadRequestException ex, HttpServletRequest req) {
-        var body = ProblemDetails.builder()
-            .type("https://example.com/problems/bad-request")
-            .title("Bad Request")
-            .status(HttpStatus.BAD_REQUEST.value())
-            .detail(ex.getMessage())
-            .instance(req.getRequestURI())
-            .build();
+    public ResponseEntity<ProblemDetail> handleBadRequest(BadRequestException ex, HttpServletRequest req) {
+        ProblemDetail body = createProblemDetail(
+            HttpStatus.BAD_REQUEST,
+            ex.getMessage(),
+            "bad-request",
+            req
+        );
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-            .contentType(MediaType.APPLICATION_PROBLEM_JSON)
-            .body(body);
+        return buildResponse(HttpStatus.BAD_REQUEST, body);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ProblemDetails> handleGeneric(Exception ex, HttpServletRequest req) {
-        var body = ProblemDetails.builder()
-            .type("https://example.com/problems/internal-error")
-            .title("Internal Server Error")
-            .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-            .detail("Unexpected error")
-            .instance(req.getRequestURI())
-            .build();
+    public ResponseEntity<ProblemDetail> handleGeneric(Exception ex, HttpServletRequest req) {
+        ProblemDetail body = createProblemDetail(
+            HttpStatus.INTERNAL_SERVER_ERROR,
+            "Unexpected error: " + ex.getClass().getSimpleName(),
+            "internal-error",
+            req
+        );
 
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, body);
+    }
+
+    private ProblemDetail createProblemDetail(HttpStatus status,
+                                              String detail,
+                                              String typeSuffix,
+                                              HttpServletRequest req) {
+        ProblemDetail body = ProblemDetail.forStatusAndDetail(status, detail);
+
+        body.setTitle(status.getReasonPhrase());
+
+        body.setType(URI.create("https://example.com/problems/" + typeSuffix));
+        body.setInstance(URI.create(req.getRequestURI()));
+        return body;
+    }
+
+    private ResponseEntity<ProblemDetail> buildResponse(HttpStatus status, ProblemDetail body) {
+        return ResponseEntity.status(status)
             .contentType(MediaType.APPLICATION_PROBLEM_JSON)
             .body(body);
     }
